# jupyterlab_pygments

./: .copier-answers.yml  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  generate_css.py  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyterlab_pygments/: __init__.py  _version.py  style.py
notebooks/: Example.ipynb
src/: index.ts
src/__tests__/: jupyterlab_pygments.spec.ts
style/: base.css  index.css
ui-tests/: package.json
ui-tests/tests/: jupyterlab_pygments.spec.ts
