[metadata]
name = jupyterlab_pygments
description = Pygments theme using JupyterLab CSS variables
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyterlab/jupyterlab_pygments
keywords = jupyter, jupyterlab, pygments

[options]
packages = find:
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
python_requires = >=3.7
include_package_data = True
zip_safe = False

[bdist_wheel]
universal = 1
